--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ pipeline:
     commands:
       - go vet
       - go test -v -cover
-      - echo $myname
+      - echo $MYNAME
     secrets: [ myname ]
   build:
     image: golang:latest
