--- a/.drone.yml
+++ b/.drone.yml
@@ -3,14 +3,18 @@ workspace:
   path: src/github.com/drone-demos/drone-with-go
 
 pipeline:
+  docker:
+    image: docker
+    commands:
+      - echo $myusername
+      - echo $MYUSERNAME
+    secrets: [ myusername ]
   test:
     image: golang:latest
     commands:
       - go vet
       - go test -v -cover
-      - echo $MYNAME
-    secrets: [ myname ]
-  build:
+   build:
     image: golang:latest
     commands:
       - go build
