--- a/.drone.yml
+++ b/.drone.yml
@@ -1,15 +1,15 @@
-workspace:
-  base: /go
-  path: src/github.com/drone-demos/drone-with-go
+kind: pipeline
+name: default
+type: docker
 
-pipeline:
-  test:
-    image: golang:latest
-    commands:
-      - go vet
-      - go test -v -cover
-      
-   build:
-    image: golang:latest
-    commands:
-      - go build
+steps:
+- name: test
+  image: golang:latest
+  commands:
+  - go vet
+  - go test -v -cover
+  
+- name: build
+  image: golang:latest
+  commands:
+  - go build
